Final code commit after implementing all features mentioned on mail. Technology used in it are - MVVM, Kotlin(100%), Coroutine, Asynctask, Fast networking, Constraint Layout, Coroutines, Glide etc