@@ -6,14 +6,12 @@ android {
     compileSdkVersion 29
     defaultConfig {
         applicationId "com.extreme.zebra"
-        minSdkVersion 21
+        minSdkVersion 25
         targetSdkVersion 29
         versionCode 1
         versionName "1.7.0"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
-
     }
     buildTypes {
         debug {
@@ -41,6 +39,15 @@ android {
     }
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8
+    }
+    testOptions {
+        unitTests.all {
+            // All the usual Gradle options.
+            jvmArgs '-XX:MaxPermSize=256m'
+        }
+    }
+    testOptions {
+        unitTests.returnDefaultValues = true
     }
     /*
     *Build Flavors
@@ -117,7 +124,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
+    testImplementation 'org.mockito:mockito-core:3.1.0'
     androidTestImplementation 'org.mockito:mockito-core:3.1.0'
     androidTestImplementation 'org.mockito:mockito-android:3.1.0'
     androidTestImplementation 'androidx.test:rules:1.3.0'
